--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -88,10 +88,21 @@ p {
 	padding: 0.65em 1.3em;
 	font-weight: 700;
 	font-size:1.1em;
-	@media #{$tablet} {
-	font-size: 1.2em;
 
+	@media #{$tablet} {
+		font-size: 1.2em;
 	}
+
+	&.outline {
+		border: 2px solid $primary-color;
+		background: transparent;
+		color: $primary-color;
+		font-size: 1em;
+		&:hover {
+			color: white;
+		}
+	}
+	
 }
 
 .button{
@@ -127,8 +138,19 @@ a:hover {
     background: linear-gradient(to right, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%) !important;
 }
 
+
+.blue-gradient {
+	background: rgba(32,152,245,0.85) !important;
+    background: -moz-linear-gradient(left, rgba(95,202,255,0.85) 0%, rgba(32,152,245,0.85) 100%) !important;
+    background: -webkit-gradient(left top, right top, color-stop(0%, rgba(95,202,255,0.85)), color-stop(100%, rgba(32,152,245,0.85))) !important;
+    background: -webkit-linear-gradient(left, rgba(95,202,255,0.85) 0%, rgba(32,152,245,0.85) 100%) !important;
+    background: -o-linear-gradient(left, rgba(95,202,255,0.85) 0%, rgba(32,152,245,0.85) 100%) !important;
+    background: -ms-linear-gradient(left, rgba(95,202,255,0.85) 0%, rgba(32,152,245,0.85) 100%) !important;
+    background: linear-gradient(to right, rgba(95,202,255,0.85) 0%, rgba(32,152,245,0.85) 100%) !important;
+}
+
 .reduced-gradient {
-		background: -moz-linear-gradient(left, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%) !important;
+	background: -moz-linear-gradient(left, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%) !important;
     background: -webkit-gradient(left top, right top, color-stop(0%, rgba(255,102,31,1)), color-stop(100%, rgba(224,58,20,0.85))) !important;
     background: -webkit-linear-gradient(left, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%) !important;
     background: -o-linear-gradient(left, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%) !important;
@@ -144,6 +166,7 @@ a:hover {
 
 	}
 }
+
 
 .ghost {
 	visibility: hidden;
