--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,13 @@
 						<img src="{{ site.baseurl }}/images/poweruplogo.png" alt="GetUp Logo" width="95" height="33" class="nav__logo"/>
 					</a>
 				</div>
+				<p class="terms">
+					Our team acknowledges that we meet and work on the land of the Gadigal people of the Eora Nation. We wish to pay respect to their Elders — past, present and future — and acknowledge the important role all Aboriginal and Torres Strait Islander people continue to play within Australia and the GetUp community. 
+					<br>
+					WARNING: Aboriginal and Torres Strait Islander people are warned that this website may contain images or names of deceased persons.
+					<br> <br>
+					© 2017 GetUp! All rights reserved. Authorised by Paul Oosting, Level 14, 338 Pitt Street, Sydney NSW 2000.
+				</p>
 			</div>
 		</footer>
 
