--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -216,14 +216,16 @@ body {
     p {
         text-align: center;
         width: 100%;
-        font-size: 1.5rem;
         margin-left: auto;
         margin-right: auto;
         line-height: 1.5;
         margin-top: 2rem;
         color: white;
+        font-size: 1.1em;
         @media #{$tablet} {
             width: 80%;
+            font-weight: 400;
+            font-size:1.5rem;
         }
         @media #{$desktop} {
             width: 70%;
