bunch of changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,900|Lobster|Roboto+Slab:400" rel="stylesheet">
+	<link href="https://s3-ap-southeast-2.amazonaws.com/getup-design-web-assets/magnific-popup.css" rel="stylesheet">
+	<script src="https://www.getup.org.au/assets/external_site.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
 <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
