--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -73,13 +73,12 @@ body {
 
 .caption-container {
   
-    padding-top: 5rem;
-    padding-bottom: 5rem;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
+    
 
- @media #{$tablet} {
-		padding-top: 2rem;
-    padding-bottom: 2rem;
-	}
+ 
+}
 
 
 .caption, .narrative {
@@ -93,8 +92,8 @@ body {
 .caption {
     padding-left: 3rem;
     padding-right:3rem;
-    padding-bottom:4rem;
-    padding-top:4rem;
+    padding-bottom:20px;
+    padding-top:2rem;
 }
 
 h3.caption {
@@ -439,10 +438,10 @@ h3.caption {
         transform: skew(0deg, 2deg);
         overflow: hidden;
         transform: scale(1.1);
-        height: 100vh;
+        height: 50vh;
         object-fit: cover;
         @media #{$tablet} {
-            height: 100vh;
+            height: 80vh;
             min-height: 450px;
         }
     }
