--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -359,16 +359,11 @@ h3.caption {
     width: 100%;
     object-fit: cover;
     position: absolute;
-}
-     @media screen and (max-width: 39.9375em) {
-        height: 65vh;
-     }
+    @media #{$tablet} {
+        min-height: 500px;
+    }
     
 }
-
-
-
-
 
 .home-hero-image-powerup-container {
     position: absolute;
@@ -393,11 +388,6 @@ h3.caption {
         
         margin-top: 10vh;
 
-    }
-
-    @media screen and (max-width: 39.9375em) {
-
-        padding-top:150px;
     }
 }
 
