padding around opening text

--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -224,6 +224,12 @@ h3.caption {
     margin-top: 6rem;
 }
 
+.home__our-story p {
+
+    padding:20px;
+}
+
+
 .home__our-story {
     h2 {
         text-align: center;
