--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -361,7 +361,7 @@ h3.caption {
     margin-bottom: 2rem;
     text-shadow: 0px 4px 7px rgba(0, 0, 0, .9);
     @media #{$tablet} {
-        font-size: 2rem;
+        font-size: 1.5rem;
     }
 }
 
@@ -391,12 +391,12 @@ h3.caption {
         width: 90% !important;
         display: flex;
     margin: auto;
+    margin-top: 10vh;
 }
     @media #{$desktop} { 
     display: flex;
     margin: auto;
         width: 80% !important;
-        
         margin-top: 10vh;
 
     }
