--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -435,16 +435,21 @@ h3.caption {
     transform: skew(0deg, -2deg);
     overflow: hidden;
     position: relative;
+   
     .x-home-image {
         transform: skew(0deg, 2deg);
         overflow: hidden;
         transform: scale(1.1);
-        height: 50vh;
+        height: 110vh;
         object-fit: cover;
         @media #{$tablet} {
-            height: 80vh;
+            height: 110vh;
             min-height: 450px;
         }
+         @media #{$desktop} {
+        // transform: scale(1.5);
+        height: 50vh;
+    
     }
 }
 
@@ -480,8 +485,9 @@ h3.caption {
     .black-container {
         color: white;
         width: 100%;
+        height: 100%;
         text-align: center;
-        padding: 4rem 2rem;
+        padding: 2rem 2rem;
 
         @media #{$tablet} {
             width: 90%;
