--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -449,7 +449,7 @@ h3.caption {
          @media #{$desktop} {
         // transform: scale(1.5);
         height: 50vh;
-    
+         }
     }
 }
 
