Switch to magnific popup

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,13 @@
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,900|Lobster|Roboto+Slab:400" rel="stylesheet">
 	<link href="https://s3-ap-southeast-2.amazonaws.com/getup-design-web-assets/magnific-popup.css" rel="stylesheet">
-	<script src="https://www.getup.org.au/assets/external_site.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-<script
+	<script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
+	<script src="https://www.getup.org.au/assets/external_site.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+
 	{% seo %}
 	{% feed_meta %}
 	{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
@@ -91,6 +92,13 @@
 				document.body.classList.toggle("nav-open");
 				return false;
 			};
+			$('.donate-button').magnificPopup({
+            	type: 'iframe',
+            	mainClass: 'mfp-fade',
+            	iframe: {
+                	patterns: {}
+           		}
+        	});
 		</script>
 	</body>
 </html>
