--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -482,21 +482,25 @@ h3.caption {
     }
 
 
+
+
     .black-container {
         color: white;
         width: 100%;
-        height: 100%;
+       height:100%;
         text-align: center;
         padding: 2rem 2rem;
 
         @media #{$tablet} {
             width: 90%;
+            
             text-align:left;
             padding: 3rem 1rem 3rem 5rem;
         }
 
         @media #{$desktop} {
             width: 75%;
+            height:80%
         }
 
         &.reverse {
