--- a/_sass/home.scss
+++ b/_sass/home.scss
@@ -259,6 +259,13 @@ h3.caption {
     }
 }
 
+
+a.blue {
+
+    color:#2098f5;
+}
+
+
 .narrative-container {
     margin-top: 4rem;
     color: white;
