nav height the same

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -28,6 +28,7 @@
     background: linear-gradient(to right, rgba(255,102,31,1) 0%, rgba(224,58,20,1) 100%) !important;
 	}
 header {
+	height:70px;
 	color: #fff;
 	padding: 8px 0;
 	background: rgba(0, 0, 0, 0); /* Old browsers */
