about-page responsiveness

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -29,7 +29,7 @@
     
     @media #{$tablet} {
         width: 75% !important;
-
+        
     }
     @media #{$desktop} {
         width: 50% !important;
@@ -37,8 +37,14 @@
             padding-top: 0px !important;
         }
     }
+}
 
-    
+@media screen and (max-width: 1200px) {
+span {
+            width: 90% !important;
+            padding-left: 2em !important;
+        }
+
 }
 
 .about-logo {
