--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,7 @@
 					</div>
 					{% include navigation.html %}
 				</div>
+				<div class="white-bg" style="position:absolute; height: 100%;"></div>
 			</header>
 
 		{% else %}
@@ -56,6 +57,8 @@
 					</div>
 					{% include navigation.html %}
 				</div>
+				<div class="white-bg" style="position:absolute; height: 100%;"></div>
+				<div class="gradientgradient" style="position:absolute; height: 100%;"></div>
 			</header>
 
 		{% endif %}
@@ -83,7 +86,7 @@
 				</p>
 			</div>
 		</footer>
-
+		
 
 		
 		<script>
