--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -1,6 +1,6 @@
 
 footer {
-	padding: 50px 0 50px 0;
+	padding: 20px 0 50px 0;
 	font-size: 1em;
 	position: relative;
 	background: black;
@@ -64,9 +64,17 @@ footer {
 
 .footer-logo {
 	display: flex;
+	width: 100px;
+	
 	@media #{$tablet} {
 		justify-content: center;
 	}
+}
+
+.footer-logo-center {
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
 }
 
 .terms {
