--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -68,6 +68,9 @@ footer {
 	
 	@media #{$tablet} {
 		justify-content: center;
+		margin-left: auto;
+	margin-right: auto;
+	margin-top: 20px;
 	}
 }
 
