--- a/_sass/faqs.scss
+++ b/_sass/faqs.scss
@@ -98,3 +98,14 @@
     }
 }
 
+.expandall {
+    text-align:right;
+    cursor: pointer;
+    color: #2098f5;
+    display: flex;
+    justify-content: flex-end;
+    &:hover {
+        color: darken(#2098f5,20);
+    }
+}
+
