--- a/_sass/faqs.scss
+++ b/_sass/faqs.scss
@@ -99,13 +99,17 @@
 }
 
 .expandall {
-    text-align:right;
+    // text-align:right;
     cursor: pointer;
     color: #2098f5 !important;
     display: flex;
     justify-content: flex-end;
+    width: 115px;
+    height: 40px;
+    font-size: 15px !important;
+    margin-left: auto;
     &:hover {
-        color: darken(#2098f5,20) !important;
+        color: white !important;
     }
 }
 
