text changes to faq

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -111,6 +111,14 @@
                 	patterns: {}
            		}
         	});
+
+			$('.faq-donate-button').magnificPopup({
+            	type: 'iframe',
+            	mainClass: 'mfp-fade',
+            	iframe: {
+                	patterns: {}
+           		}
+        	});
 		</script>
 	</body>
 </html>
