--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="PowerUp" />
 <meta property="og:description"  content="Join us at GetUp&rsquo;s first national conference in Sydney on 23-24 September." />
-<meta property="og:image" content="http://cdn.getup.org.au/image_15647_full.png" />
+<meta property="og:image" content="http://cdn.getup.org.au/image_15665_full.jpg" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation-flex.min.css">
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 	<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png">
