--- a/_sass/speakers.scss
+++ b/_sass/speakers.scss
@@ -63,9 +63,17 @@
     position: relative;
 }
 
-.programs-home__image-container {
+.image-container {
     overflow: hidden;
     position: relative;
+
+     @media #{$tablet} {
+        height: 800px;
+    }
+    @media #{$desktop} {
+        height: 100vh;
+    }
+   
     
 }
 
@@ -79,9 +87,7 @@
     background-size: cover;
     object-fit: cover;
     position: relative;
-
-
-  
+ 
 
     @media #{$tablet} {
         height: 800px;
@@ -93,3 +99,95 @@
         display:none;
     }
 }
+
+
+
+
+
+    .speaker-container {
+           color: white;
+    width: 100%;
+    height: 40rem;
+    text-align: center;
+    padding: 2rem 2rem;
+
+        @media #{$tablet} {
+            width: 90%;
+            
+            text-align:left;
+            padding: 3rem 1rem 3rem 5rem;
+        }
+
+        @media #{$desktop} {
+            width: 75%;
+            height:80%
+           
+        }
+
+      
+        }
+
+
+
+
+
+.speaker {
+
+    padding:0px 30px 0px 30px;
+ color: white;
+     @media screen and (max-width: 39.9375em) {
+        text-align: center;
+    }
+
+    @media #{$tablet} {
+      text-align: center;
+    }
+     @media #{$desktop} {
+        text-align: left;
+        
+    }
+}
+
+
+.x-speaker-image {
+    transform: skew(0deg, 2deg);
+    overflow: hidden;
+    transform: scale(1.1);
+    object-fit: cover;
+
+   
+
+    @media #{$tablet} {
+      height: 70vh;
+    }
+    @media #{$desktop} {
+        height: 77vh;
+        margin-top:30px;
+        
+    }
+    @media screen and (max-width: 39.9375em) {
+        display:none;
+    }
+}
+
+
+.black-2 {
+    padding-top:30px !important;
+    padding-bottom:20px !important;
+height:100%;
+width:100%;
+
+ @media #{$tablet} {
+      padding-top:30px !important;
+    padding-bottom:20px !important;
+     width:100% !important;
+        height:100%;
+    }
+    @media #{$desktop} {
+        width:50% !important;
+        height:100%;
+    }
+    
+
+}
+
