--- a/_sass/speakers.scss
+++ b/_sass/speakers.scss
@@ -197,14 +197,23 @@ width:100%;
 .landing {
     margin-top: 50px;
     margin-bottom: 100px;
-    background: rgba(255, 255, 255, 0.9) !important;
+    background: rgba(255, 255, 255, 0.85) !important;
+    padding: 20px !important;
+    margin-bottom: 3rem !important;
+    margin-top: 0 !important;
+    @media #{$tablet} {
+        padding: 3rem !important;
+        background: rgba(255, 255, 255, 0.93) !important;
+        
+    }
     h2 {
-        color: #ff671f;
-        line-height: 1.1;
-        text-align: center;
-        @media #{$tablet} {
-            text-align: left;
-        }
+        color: black;
+        line-height: 1.3;
+        text-align: left;
+        font-family: "Lato", sans-serif !important;
+        font-weight: bold;
+        font-size: 1.3em;
+        margin-top: 30px;
     }
     p {
         color: #333;
@@ -216,7 +225,10 @@ width:100%;
         margin-right: auto;
         display: flex;
         @media #{$tablet} {
-            width: 50%;
+            width: 65%;
+            margin-right: auto;
+            display: flex;
+            margin-left: 0;
 
         }
     }
