--- a/_sass/speakers.scss
+++ b/_sass/speakers.scss
@@ -196,11 +196,11 @@ width:100%;
 
 .landing {
     margin-top: 50px;
-    margin-bottom: 100px;
+    margin-bottom: 50px !important;
     background: rgba(255, 255, 255, 0.85) !important;
     padding: 20px !important;
-    margin-bottom: 3rem !important;
-    margin-top: 0 !important;
+    // margin-bottom: 3rem !important;
+    // margin-top: 0 !important;
     @media #{$tablet} {
         padding: 3rem !important;
         background: rgba(255, 255, 255, 0.93) !important;
