--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<title> {{page.title}} </title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta property="og:title" content="PowerUp" />
 	<meta property="og:description"  content="Join us at GetUp's first national conference in Sydney on 23-24 September." />
@@ -18,6 +19,7 @@
   crossorigin="anonymous"></script>
 	<script src="https://www.getup.org.au/assets/external_site.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+	
 
 	{% feed_meta %}
 	{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
