--- a/_sass/speakers.scss
+++ b/_sass/speakers.scss
@@ -256,6 +256,12 @@ width:100%;
 
 
 .ticket {
+
+    h3 {
+        font-family: 'Lato', sans-serif !important;
+        font-weight: bold;
+        color: #ff671f;
+    }
     
     h2 {
         font-family: 'Lato', sans-serif !important;
