--- a/_sass/programs.scss
+++ b/_sass/programs.scss
@@ -191,6 +191,9 @@ section {
     }
 }
 
+div.x-img-container.speakers-hero.programs-hero.programs-img-only > div > div > div > div > p {
+    font-size: 1.5rem;
+}
 
 
 
@@ -342,9 +345,10 @@ box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.12);
         .x-speaker-image {
             display:block !important;
         }
-        h1 {
+        h1.pad-top {
             font-size: 2.5rem;
             line-height: 1.1;
+            padding-top: 70px;
         }
         .programs-blue-bg {
             padding-top: 40px;
