--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,6 +73,23 @@
 			<div class="container">
 				
 				{% include footer.html %}
+				
+
+				<!-- <div class="row">
+					<div class="small-4 columns sponsor-logo-container">
+						<img src="{{ site.baseurl }}/images/ba.png" alt="Bank Australia Logo" width="95" height="33" class="sec-sponsor" />
+						<p class="sponsor-name"> Hero Sponsor </p>
+					</div>
+					<div class="small-4 columns sponsor-logo-container">
+						<img src="{{ site.baseurl }}/images/futuresuper.png" alt="Future Super Logo" width="95" height="33" class="primary-sponsor" />
+						<p class="sponsor-name"> Principal Sponsor </p>
+					</div>
+					<div class="small-4 columns sponsor-logo-container">
+						<img src="{{ site.baseurl }}/images/lush.png" alt="Lush Logo" width="95" height="33" class="sec-sponsor" />
+						<p class="sponsor-name"> Gold Sponsor </p>
+					</div>
+				</div> -->
+
 				<div class="company-name footer-logo">
 					<a href="{{ site.baseurl }}/">
 						<img src="{{ site.baseurl }}/images/poweruplogo.png" alt="GetUp Logo" width="95" height="33" class="footer__logo"/>
