--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -65,12 +65,12 @@ footer {
 .footer-logo {
 	display: flex;
 	width: 100px;
+	margin-left: auto;
+	margin-right: auto;
 	
 	@media #{$tablet} {
 		justify-content: center;
-		margin-left: auto;
-	margin-right: auto;
-	margin-top: 20px;
+		margin-top: 20px;
 	}
 }
 
@@ -84,4 +84,44 @@ footer {
 	margin-top: 2rem;
 	font-size: 12px;
 	text-align: center;
+}
+
+.primary-sponsor {
+	width: 80%;
+	display: flex;
+	justify-content: center;
+	margin-left: auto;
+	margin-right: auto;
+	@media only screen and (max-width: 40em) {
+		width: 100%;
+	}
+}
+
+.sec-sponsor {
+	width: 50%;
+	display: flex;
+	justify-content: center;
+	margin-left: auto;
+	margin-right: auto;
+	@media only screen and (max-width: 40em) {
+		width: 100%;
+	}
+}
+
+.sponsor-logo-container {
+	align-self: flex-end;
+	padding-top: 40px;
+	@media only screen and (max-width: 40em) {
+		padding-top: 80px;
+	}
+}
+
+.sponsor-name {
+	color: #ff671f;
+	font-size: 14px;
+	text-align: center;
+	padding-top: 5px;
+	@media only screen and (max-width: 40em) {
+		font-size: 11px;
+	}
 }
