--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,6 +77,7 @@
 
 				<div class="row">
 					<div class="small-4 columns sponsor-logo-container">
+						<img src="{{ site.baseurl }}/images/ba-new.png" alt="Bank Australia Logo" width="95" height="33" class="sec-sponsor" />
 						<p class="sponsor-name"> Hero Sponsor </p>
 					</div>
 					<div class="small-4 columns sponsor-logo-container">
